syntax = "proto3";
package ink.pmc.framework.bridge.proto;

import "bridge/PlayerInfo.proto";
import "bridge/WorldInfo.proto";

message ServerInfo {
  string id = 1;
  string group = 2;
  repeated PlayerInfo players = 3;
  repeated WorldInfo worlds = 4;
}